--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
     font-size:25px;
 }
 
-@media (max-width:750px){
+@media (max-width:640px){
     .container{
         display:flex;
         flex-wrap:wrap;
@@ -124,9 +124,50 @@
 
     }
     .time{
-        margin:140px -11% 0% -30%;
+        margin:90px -20px;
     }
     #feature-one >span{
         font-size:15px;
     }
 }
+
+@media (max-width:731px){
+    .container{
+        display:flex;
+        flex-wrap:wrap;
+        position: relative;
+    }
+    .watch-features{
+        top:10%;
+    }
+    #watch1{
+        margin-top:25%;
+        height:100%;
+        width:50%;
+    }
+    .heartbeat{
+        margin:40% -6%  0% -7%;
+
+    }
+    .time{
+        margin:105px -20px;
+    }
+    #feature-one >span{
+        font-size:15px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
